--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
     <div class="container">
       <div class="sidebar">
         <div style="background: linear-gradient(229.99deg, #11DEE9 -26%, #017E8B 145%);">
-          <h1>Snow in the desert</h1>
-          <p>Love, death & robots</p>
+          <h1>Baitcasting reel</h1>
+          <p>SHIMANO SLX 151</p>
         </div>
-        <div style="background: linear-gradient(215.32deg, #F90306 -1%, #9E0706 124%);">
-          <h1>Life Hutch</h1>
-          <p>Love, death & robots</p>
+        <div style="background: linear-gradient(215.32deg, #f5803c -1%, #f57b4b 124%);">
+          <h1>Feeder fishing</h1>
+          <p>Fisherman's dream</p>
         </div>
         <div style="background: linear-gradient(221.87deg, #8308EA 1%, #5305AF 128%);">
           <h1>Zima Blue</h1>
           <p>Love, death & robots</p>
         </div>
-        <div style="background: linear-gradient(220.16deg, #FFE101 -8%, #F39102 138%);">
-          <h1>Automated Customer Service</h1>
-          <p>Love, death & robots</p>
+        <div style="background: linear-gradient(220.16deg, #f15f0b -8%, #f36e02 138%);">
+          <h1>At dawn</h1>
+          <p>I want that too!</p>
         </div>
       </div>
       <div class="main-slide">
         <div
           style="
-            background-image: url('https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1996&q=80');
+            background-image: url('https://images.unsplash.com/photo-1606676366552-b1bb2887eef5?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjUxfHxmaXNoaW5nfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
           "
         ></div>
         <div
@@ -43,12 +43,12 @@
         ></div>
         <div
           style="
-            background-image: url('https://images.unsplash.com/photo-1501529301789-b48c1975542a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+            background-image: url('https://images.unsplash.com/photo-1576007144534-7650c9ee9149?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjM1fHxmaXNoaW5nfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
           "
         ></div>
         <div
           style="
-            background-image: url('https://images.unsplash.com/photo-1520263115673-610416f52ab6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');
+            background-image: url('https://images.unsplash.com/photo-1537872384762-e785271d14f8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=889&q=80');
           "
         ></div>
       </div>
