--- a/index.html
+++ b/index.html
@@ -1,66 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Слайдер | Lesson 3</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="sidebar">
-        <div style="background: linear-gradient(229.99deg, #11DEE9 -26%, #017E8B 145%);">
-          <h1>Baitcasting reel</h1>
-          <p>SHIMANO SLX 151</p>
-        </div>
-        <div style="background: linear-gradient(215.32deg, #f5803c -1%, #f57b4b 124%);">
-          <h1>Feeder fishing</h1>
-          <p>Fisherman's dream</p>
-        </div>
-        <div style="background: linear-gradient(221.87deg, #8308EA 1%, #5305AF 128%);">
-          <h1>Zima Blue</h1>
-          <p>Love, death & robots</p>
-        </div>
-        <div style="background: linear-gradient(220.16deg, #f15f0b -8%, #f36e02 138%);">
-          <h1>At dawn</h1>
-          <p>I want that too!</p>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Слайдер | Lesson 3</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="sidebar">
+      <div style="background: linear-gradient(229.99deg, #11DEE9 -26%, #017E8B 145%);">
+        <h1>Baitcasting reel</h1>
+        <p>SHIMANO SLX 151</p>
       </div>
-      <div class="main-slide">
-        <div
-          style="
-            background-image: url('https://images.unsplash.com/photo-1606676366552-b1bb2887eef5?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjUxfHxmaXNoaW5nfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
-          "
-        ></div>
-        <div
-          style="
-            background-image: url('https://images.unsplash.com/photo-1511447333015-45b65e60f6d5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2023&q=80');
-          "
-        ></div>
-        <div
-          style="
-            background-image: url('https://images.unsplash.com/photo-1576007144534-7650c9ee9149?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjM1fHxmaXNoaW5nfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
-          "
-        ></div>
-        <div
-          style="
-            background-image: url('https://images.unsplash.com/photo-1537872384762-e785271d14f8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=889&q=80');
-          "
-        ></div>
+      <div style="background: linear-gradient(215.32deg, #f5803c -1%, #f57b4b 124%);">
+        <h1>Feeder fishing</h1>
+        <p>Fisherman's dream</p>
       </div>
-      <div class="controls">
-        <button class="down-button">
-          <i class="fas fa-arrow-down"></i>
-        </button>
-        <button class="up-button">
-          <i class="fas fa-arrow-up"></i>
-        </button>
+      <div style="background: linear-gradient(221.87deg, #0f9b6c 1%, #0ab457 128%);">
+        <h1>Growing generation</h1>
+        <p>I hope that my son will also be a fisherman)</p>
+      </div>
+      <div style="background: linear-gradient(220.16deg, #f15f0b -8%, #f36e02 138%);">
+        <h1>At dawn</h1>
+        <p>I want that too!</p>
       </div>
     </div>
-    <script src="./app.js"></script>
-  </body>
+    <div class="main-slide">
+      <div style="
+            background-image: url('https://images.unsplash.com/photo-1606676366552-b1bb2887eef5?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjUxfHxmaXNoaW5nfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
+          "></div>
+      <div style="
+            background-image: url('https://images.unsplash.com/photo-1568641976179-a4ee72be956a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NzU0fHxmaXNoaW5nfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
+          "></div>
+      <div style="
+            background-image: url('https://images.unsplash.com/photo-1576007144534-7650c9ee9149?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjM1fHxmaXNoaW5nfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
+          "></div>
+      <div style="
+            background-image: url('https://images.unsplash.com/photo-1537872384762-e785271d14f8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=889&q=80');
+          "></div>
+    </div>
+    <div class="controls">
+      <button class="down-button">
+        <i class="fas fa-arrow-down"></i>
+      </button>
+      <button class="up-button">
+        <i class="fas fa-arrow-up"></i>
+      </button>
+    </div>
+  </div>
+  <script src="./app.js"></script>
+</body>
+
 </html>
